# StrikerBot---Autonomous-GPS-Navigation-Robot

./: README.md
striker_bot_description/: package.xml  setup.cfg  setup.py
striker_bot_description/config/: controller.yaml  ekf.yaml  nav2_params.yaml
striker_bot_description/launch/: complete_navigation.launch.py  gazebo.launch.py  localization.launch.py  navigation.launch.py
striker_bot_description/striker_bot_description/: check_gps.py  fake_gps_publisher.py  follow_waypoints.py  gps_utils.py  gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py  manual_navigation.py  serial_motor_driver.py  test_node.py  waypoint_logger.py
striker_bot_description/urdf/: striker_bot.urdf.xacro
striker_bot_description/worlds/: empty.world  gps_world.world
